# OopsArea

./: CMakeLists.txt  README.md  area.cc
.github/workflows/: cmake.yml
include/shape/: circle.h  cone.h  cube.h  cuboid.h  cylinder.h  rectangle.h  shape.h  sphere.h  square.h  tetrahedron.h  three_dimension.h  trapezoid.h  triangle.h  two_dimension.h
src/: CMakeLists.txt  circle.cc  cone.cc  cuboid.cc  cylinder.cc  rectangle.cc  sphere.cc  tetrahedron.cc  trapezoid.cc  triangle.cc
